[package]
name = "graphile_worker_runtime"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Async runtime compatibility package for graphile_worker"
homepage = "https://docs.rs/graphile_worker_runtime"
documentation = "https://docs.rs/graphile_worker_runtime"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = []
categories = []
readme = "README.md"

[features]
default = ["runtime-tokio"]
runtime-tokio = ["dep:tokio"]
runtime-async-std = ["dep:async-std"]

[dependencies]
async-channel.workspace = true
async-lock.workspace = true
async-std = { workspace = true, optional = true }
event-listener.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "time"], optional = true }
