[package]
name = "graphile_worker_shutdown_signal"
version = "0.3.12"
edition = "2021"
license-file = "LICENSE.md"
description = "Migrations package for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_shutdown_signal"
documentation = "https://docs.rs/graphile_worker_shutdown_signal"
repository = "https://github.com/leo91000/graphile_worker_rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
async-signal.workspace = true

[target.'cfg(windows)'.dependencies]
event-listener.workspace = true
windows-sys = { workspace = true, features = ["Win32_System_Console"] }

[features]
default = ["runtime-tokio"]
runtime-tokio = []
runtime-async-std = []
