[package]
name = "graphile_worker_task_details"
version = "0.1.5"
edition = "2021"
license-file = "LICENSE.md"
description = "Task details for graphile_worker, mapping task IDs to identifiers"
homepage = "https://docs.rs/graphile_worker"
documentation = "https://docs.rs/graphile_worker"
repository = "https://github.com/leo91000/graphile_worker_rs"
readme = "README.md"

[dependencies]
graphile_worker_runtime.workspace = true
tracing.workspace = true

[features]
default = ["runtime-tokio"]
runtime-tokio = ["graphile_worker_runtime/runtime-tokio"]
runtime-async-std = ["graphile_worker_runtime/runtime-async-std"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
