[package]
name = "graphile_worker_task_handler"
version = "0.5.21"
edition = "2021"
license = "MIT"
description = "A library to handle tasks for the Graphile Worker project"
homepage = "https://docs.rs/graphile_worker_task_handler"
documentation = "https://docs.rs/graphile_worker_task_handler"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = []
categories = []
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphile_worker_ctx.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
default = ["runtime-tokio"]
runtime-tokio = ["graphile_worker_ctx/runtime-tokio"]
runtime-async-std = ["graphile_worker_ctx/runtime-async-std"]

[dev-dependencies]
anyhow.workspace = true
