[package]
name = "graphile_worker_job"
version = "0.1.7"
edition = "2021"
license-file = "LICENSE.md"
description = "Job package for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker_crontab_types"
documentation = "https://docs.rs/graphile_worker_crontab_types"
repository = "https://github.com/leo91000/graphile_worker/crates/crontab_types"
keywords = []
categories = []
readme = "README.md"

[dependencies]
getset.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
