[package]
name = "graphile_worker_lifecycle_hooks"
version = "0.2.6"
edition = "2021"
license-file = "LICENSE.md"
description = "Lifecycle hooks for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker"
documentation = "https://docs.rs/graphile_worker"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = []
categories = []
readme = "README.md"

[dependencies]
graphile_worker_job = { path = "../job", version = "0.1.13" }
graphile_worker_extensions = { path = "../extensions", version = "0.1.6" }
graphile_worker_crontab_types = { path = "../crontab_types", version = "0.5.15" }
graphile_worker_job_spec = { path = "../job_spec", version = "0.1.3" }
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
futures.workspace = true
