[package]
name = "graphile_worker_lifecycle_hooks"
version = "0.2.5"
edition = "2021"
license-file = "LICENSE.md"
description = "Lifecycle hooks for graphile_worker, a high performance Rust/PostgreSQL job queue"
homepage = "https://docs.rs/graphile_worker"
documentation = "https://docs.rs/graphile_worker"
repository = "https://github.com/leo91000/graphile_worker_rs"
keywords = []
categories = []
readme = "README.md"

[dependencies]
graphile_worker_job = { path = "../job", version = "0.1.12", default-features = false }
graphile_worker_extensions = { path = "../extensions", version = "0.1.6" }
graphile_worker_crontab_types = { path = "../crontab_types", version = "0.5.14" }
graphile_worker_job_spec = { path = "../job_spec", version = "0.1.2" }
graphile_worker_database = { path = "../database", version = "0.1.0", default-features = false }
chrono.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
futures.workspace = true

[features]
default = ["runtime-tokio", "driver-sqlx"]
runtime-tokio = [
  "graphile_worker_database/runtime-tokio",
  "sqlx?/runtime-tokio",
  "graphile_worker_job/runtime-tokio",
]
runtime-async-std = [
  "graphile_worker_database/runtime-async-std",
  "sqlx?/runtime-async-std",
  "graphile_worker_job/runtime-async-std",
]
driver-sqlx = ["graphile_worker_database/driver-sqlx", "sqlx"]
